
- TODO: compression:
	button to compress or -z option (would use rar and generate par2)
	with HMI: display rar command, propose generation of password, display par2 cmd


####################################################
###       Release: ngPost v1.4                   ###
###       date:    2019/12/??                    ###
####################################################

- check for updates (parse last version on GitHUB)




####################################################
###       Release: ngPost v1.3                   ###
###       date:    2019/12/05                    ###
####################################################

- add robustness on posting articles by retrying a number of times if Failure

- new option -r or -retry for that purpose (default value 5)

- allow to stop an ongoing post from the HMI

- add some tooltips for the options (HMI)

- fix potential crash (double deletion of NgPost::_file)



####################################################
###       Release: ngPost v1.2                   ###
###       date:    2019/11/16                    ###
####################################################

- switch Linux release to Qt 12.6 LTS (only 64bit available)

- add Windows 32 bit release (Qt 12.5 LTS)

- fix potential crash (always emit a signal for logging as the writting must be done in the HMI thread)

- msg-id format update (more compact without curly brackets)

- default port to 563 if SSL option is checked (especially for command line with server details)

- HMI: fix automatic nzb filename when adding the first file
- HMI: add a button to generate a random nzb password (you should then use it for your encryption password!)
- HMI: add a button to generate a random poster email for the whole post

- update postFiles.sh to manage several files and relative paths


####################################################
###       Release: ngPost v1.1                   ###
###       date:    2019/09/17                    ###